[gd_scene load_steps=5 format=2]

[ext_resource path="res://asset/ui/map_biom/grass_land.png" type="Texture" id=1]
[ext_resource path="res://asset/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=2]
[ext_resource path="res://addons/Godot-Touch-Input-Manager/InputManager.gd" type="Script" id=3]
[ext_resource path="res://asset/ui/map_chooser_item/map_choose_item.gd" type="Script" id=4]

[node name="map_choose_item" type="TextureRect"]
margin_right = 500.0
margin_bottom = 240.0
rect_min_size = Vector2( 500, 240 )
texture = ExtResource( 1 )
expand = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
grow_vertical = 0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
modulate = Color( 0, 0, 0, 0.509804 )
margin_right = 503.0
margin_bottom = 106.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer"]
margin_top = 33.0
margin_right = 503.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 2 )
text = "Grass Land"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="input_detection" type="Node" parent="."]
script = ExtResource( 3 )

[connection signal="gui_input" from="." to="." method="_on_map_choose_item_gui_input"]
[connection signal="any_gesture" from="input_detection" to="." method="_on_input_detection_any_gesture"]
